# auto-prompting-demo

./: .gitignore  README.md  TRACING.md  pyproject.toml
src/prompt_optimizer/: main.py  rag.py  runner.py  tracing.py
src/prompt_optimizer/evaluate_crew/: evaluate_crew.py
src/prompt_optimizer/evaluate_crew/config/: agents.yaml  tasks.yaml
src/prompt_optimizer/optimize_crew/: optimize_crew.py
src/prompt_optimizer/optimize_crew/config/: agents.yaml  tasks.yaml
src/prompt_optimizer/tools/: run_prompt.py
